--- a/index.html
+++ b/index.html
@@ -18,65 +18,89 @@
   </head>
   <body>
     <header class="header">
-      <a class="logo" href=""
-        ><img src="./images/logo.svg" alt="logo" width="66" height="52"
-      /></a>
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-title"><a href="">Home</a></li>
-          <li class="navigation-title"><a href="">About</a></li>
-          <li class="navigation-title"><a href="">Service</a></li>
-          <li class="navigation-title"><a href="">Menu</a></li>
-          <li class="navigation-title"><a href="">Contact</a></li>
-        </ul>
-      </nav>
-      <button class="button-order-now" type="button">Order Now</button>
+      <div class="container header-container">
+        <a class="logo" href=""
+          ><img src="./images/logo.svg" alt="logo" width="66" height="52"
+        /></a>
+        <nav class="navigation">
+          <ul class="navigation-list">
+            <li class="navigation-list-item">
+              <a class="navigation-link" href="">Home</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-link" href="">About</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-link" href="">Service</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-link" href="">Menu</a>
+            </li>
+            <li class="navigation-list-item">
+              <a class="navigation-link" href="">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button class="button-order-now" type="button">Order Now</button>
+      </div>
     </header>
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
-        <p class="hero-title-text">
-          With just a few clicks, you can have your favorite meals delivered
-          straight to your doorstep, no matter where you are. Order now and
-          enjoy a hassle-free and delicious meal from the comfort of your own
-          home.
-        </p>
-        <button class="button-order-now" type="button">Order Now</button>
-        <img src="/images/saction1-salad.png" alt="salad" />
+        <div class="container">
+          <div class="hero-text-wrap">
+            <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
+            <p class="hero-title-text">
+              With just a few clicks, you can have your favorite meals delivered
+              straight to your doorstep, no matter where you are. Order now and
+              enjoy a hassle-free and delicious meal from the comfort of your
+              own home.
+            </p>
+            <button class="button-order-now" type="button">Order Now</button>
+          </div>
+          <img src="/images/saction1-salad.png" alt="salad" />
+        </div>
       </section>
 
-      <section class="section-about-ofer">
-        <img src="./images/aple.png" alt="apple" width="396" height="502" />
-        <h2 class="about-ofer-title">What’s Special About Our Offerings</h2>
-        <p class="hero-title-text">
-          With our platform, you can browse through a diverse selection of
-          cuisines and local restaurants, and choose from a variety of dishes
-          that cater to your specific taste buds.
-        </p>
-        <ul class="about-ofer-list">
-          <li class="about-ofer-list-title">
-            <h3 class="about-title">Fasest Delivery</h3>
-            <p class="about-paragraf">
-              Our advanced logistics system and dedicated delivery partners
-              ensure that your meals are delivered to you within 30-minutes.
+      <section class="section-about">
+        <div class="container">
+          <img src="./images/aple.png" alt="apple" width="396" height="502" />
+          <div class="about-text-wreper">
+            <h2 class="about-ofer-title">What’s Special About Our Offerings</h2>
+            <p class="hero-title-text about-text-title">
+              With our platform, you can browse through a diverse selection of
+              cuisines and local restaurants, and choose from a variety of
+              dishes that cater to your specific taste buds.
             </p>
-          </li>
-          <li>
-            <h3 class="about-title">Easy To Order</h3>
-            <p class="about-paragraf">
-              You can browse through a wide variety of cuisines and restaurants,
-              select your favorite meals, and place your order in just a few
-              clicks.
-            </p>
-          </li>
-        </ul>
-        <button class="button-order-now" type="button">Order Now</button>
+            <ul class="about-ofer-list">
+              <li class="about-ofer-list-title">
+                <h3 class="about-title">Fasest Delivery</h3>
+                <p class="about-paragraf">
+                  Our advanced logistics system and dedicated delivery partners
+                  ensure that your meals are delivered to you within 30-minutes.
+                </p>
+              </li>
+              <li class="about-ofer-list-title">
+                <h3 class="about-title">Easy To Order</h3>
+                <p class="about-paragraf">
+                  You can browse through a wide variety of cuisines and
+                  restaurants, select your favorite meals, and place your order
+                  in just a few clicks.
+                </p>
+              </li>
+            </ul>
+            <button class="button-order-now button-about" type="button">
+              Order Now
+            </button>
+          </div>
+        </div>
       </section>
 
       <section class="section-favorites-food">
-        <h2 class="about-ofer-title">Some of Our Favorites</h2>
-        <p class="hero-title-text">Looking for something delicious?</p>
+        <h2 class="about-ofer-title food-name-title">Some of Our Favorites</h2>
+        <p class="hero-title-text food-tittle-text">
+          Looking for something delicious?
+        </p>
         <ul class="food-list">
           <li class="food-title">
             <img
