--- a/index.html
+++ b/index.html
@@ -97,60 +97,64 @@
       </section>
 
       <section class="section-favorites-food">
-        <h2 class="about-ofer-title food-name-title">Some of Our Favorites</h2>
-        <p class="hero-title-text food-tittle-text">
-          Looking for something delicious?
-        </p>
-        <ul class="food-list">
-          <li class="food-title">
-            <img
-              src="/images/section-3/gamburger-min.png"
-              alt="gamburger-min"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li class="food-title">
-            <img
-              src="/images/section-3/Pasta-min.png"
-              alt="pasta-min"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li class="food-title">
-            <img
-              src="/images/section-3/pizza-min.png"
-              alt="pizza-min"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li class="food-title">
-            <img
-              src="/images/section-3/chicken-min.png"
-              alt="chicken-min"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li class="food-title">
-            <img
-              src="/images/section-3/salat-min.png"
-              alt="salat-min"
-              width="315"
-              height="315"
-            />
-          </li>
-          <li class="food-title">
-            <img
-              src="/images/section-3/borshch-min.png"
-              alt="borshch-min"
-              width="315"
-              height="315"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="about-ofer-title food-name-title">
+            Some of Our Favorites
+          </h2>
+          <p class="hero-title-text food-tittle-text">
+            Looking for something delicious?
+          </p>
+          <ul class="food-list">
+            <li class="food-title">
+              <img
+                src="/images/section-3/gamburger-min.png"
+                alt="gamburger-min"
+                width="315"
+                height="315"
+              />
+            </li>
+            <li class="food-title">
+              <img
+                src="/images/section-3/Pasta-min.png"
+                alt="pasta-min"
+                width="315"
+                height="315"
+              />
+            </li>
+            <li class="food-title">
+              <img
+                src="/images/section-3/pizza-min.png"
+                alt="pizza-min"
+                width="315"
+                height="315"
+              />
+            </li>
+            <li class="food-title">
+              <img
+                src="/images/section-3/chicken-min.png"
+                alt="chicken-min"
+                width="315"
+                height="315"
+              />
+            </li>
+            <li class="food-title">
+              <img
+                src="/images/section-3/salat-min.png"
+                alt="salat-min"
+                width="315"
+                height="315"
+              />
+            </li>
+            <li class="food-title">
+              <img
+                src="/images/section-3/borshch-min.png"
+                alt="borshch-min"
+                width="315"
+                height="315"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-review">
