--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
     <header class="header">
       <div class="container header-container">
         <a class="logo" href=""
-          ><img src="./images/logo.svg" alt="logo" width="66" height="52"
+          ><img
+            class="logo"
+            src="./images/icons.svg"
+            alt="logo"
+            width="66"
+            height="52"
         /></a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -107,7 +112,7 @@
           <ul class="food-list">
             <li class="food-title">
               <img
-                src="/images/section-3/gamburger-min.png"
+                src="/images/gamburger-min.png"
                 alt="gamburger-min"
                 width="315"
                 height="315"
@@ -115,7 +120,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/section-3/Pasta-min.png"
+                src="/images/Pasta-min.png"
                 alt="pasta-min"
                 width="315"
                 height="315"
@@ -123,7 +128,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/section-3/pizza-min.png"
+                src="/images/pizza-min.png"
                 alt="pizza-min"
                 width="315"
                 height="315"
@@ -131,7 +136,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/section-3/chicken-min.png"
+                src="/images/chicken-min.png"
                 alt="chicken-min"
                 width="315"
                 height="315"
@@ -139,7 +144,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/section-3/salat-min.png"
+                src="/images/salat-min.png"
                 alt="salat-min"
                 width="315"
                 height="315"
@@ -147,7 +152,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/section-3/borshch-min.png"
+                src="/images/borshch-min.png"
                 alt="borshch-min"
                 width="315"
                 height="315"
@@ -158,36 +163,54 @@
       </section>
 
       <section class="section-review">
-        <h2 class="about-ofer-title">What our Customers Say</h2>
-        <p class="hero-title-text">
-          Don't just take our word for it - see what our satisfied customers
-          have to say
-        </p>
-        <ul class="review-list">
-          <li class="review-list-title">
-            <b class="review-paragraf"
-              >“The Best app I have used to order food in a while, so many
-              options to choose from too, I would recommend to a freind, No
-              questions asked”</b
-            ><img src="./images/avatarm.png" alt="man" width="48" height="48" />
-            <h3 class="review-name">Sumith Shah</h3>
-            <p class="about-paragraf">Some Dude</p>
-          </li>
-          <li class="review-list-title">
-            <b class="review-paragraf"
-              >“The ease with which I can just go in and order what i want was
-              amazing, It has been a very pleasant experience ordering from this
-              app”</b
-            ><img
-              src="./images/avatarfem.png"
-              alt="woman"
-              width="48"
-              height="48"
-            />
-            <h3 class="review-name">Sumith Shah</h3>
-            <p class="about-paragraf">Some Dude</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="about-ofer-title review-h-title">
+            What our Customers Say
+          </h2>
+          <p class="hero-title-text review-title-paragraf">
+            Don't just take our word for it - see what our satisfied customers
+            have to say
+          </p>
+          <ul class="review-list">
+            <li class="review-list-title">
+              <b class="review-paragraf"
+                >“The Best app I have used to order food in a while, so many
+                options to choose from too, I would recommend to a freind, No
+                questions asked”</b
+              >
+              <div class="div-autor-review">
+                <img
+                  src="./images/avatarm.png"
+                  alt="man"
+                  width="48"
+                  height="48"
+                />
+                <h3 class="review-name">Sumith Shah</h3>
+                <p class="about-paragraf">Some Dude</p>
+                >
+              </div>
+            </li>
+            <li class="review-list-title">
+              <b class="review-paragraf"
+                >“The ease with which I can just go in and order what i want was
+                amazing, It has been a very pleasant experience ordering from
+                this app”</b
+              >
+              <div class="div-autor-review">
+                >
+                <img
+                  src="./images/avatarfem.png"
+                  alt="woman"
+                  width="48"
+                  height="48"
+                />
+                <h3 class="review-name">Sumith Shah</h3>
+                <p class="about-paragraf">Some Dude</p>
+                >
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="section-subscribe">
@@ -215,7 +238,11 @@
 
     <footer>
       <a class="logo" href=""
-        ><img src="./images/logo.svg" alt="logo" width="66" height="52"
+        ><img
+          src="./images/icons.svg#icon-logo"
+          alt="logo"
+          width="66"
+          height="52"
       /></a>
       <nav class="navigation">
         <ul class="navigation-list">
