--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a class="logo" href=""
           ><img
             class="logo"
-            src="./images/icons.svg"
+            src="./images/logo.svg"
             alt="logo"
             width="66"
             height="52"
@@ -52,7 +52,7 @@
 
     <main>
       <section class="hero">
-        <div class="container">
+        <div class="container about-container">
           <div class="hero-text-wrap">
             <h1 class="hero-title">Enjoy Your Favorite Food From Anywhere</h1>
             <p class="hero-title-text">
@@ -63,13 +63,23 @@
             </p>
             <button class="button-order-now" type="button">Order Now</button>
           </div>
-          <img src="/images/saction1-salad.png" alt="salad" />
+          <img class="hero-img" src="/images/saction1-salad.png" alt="salad" />
         </div>
       </section>
 
       <section class="section-about">
         <div class="container">
-          <img src="./images/aple.png" alt="apple" width="396" height="502" />
+          <div class="about-img-border">
+            <div class="about-img-wraper">
+              <img
+                class="about-img"
+                src="./images/aple.png"
+                alt="apple"
+                width="396"
+                height="502"
+              />
+            </div>
+          </div>
           <div class="about-text-wreper">
             <h2 class="about-ofer-title">What’s Special About Our Offerings</h2>
             <p class="hero-title-text about-text-title">
@@ -79,6 +89,11 @@
             </p>
             <ul class="about-ofer-list">
               <li class="about-ofer-list-title">
+                <a href="" class="about-link">
+                  <svg class="about-icon" width="32" height="32">
+                    <use href="./images/icons.svg#icon-rocket"></use>
+                  </svg>
+                </a>
                 <h3 class="about-title">Fasest Delivery</h3>
                 <p class="about-paragraf">
                   Our advanced logistics system and dedicated delivery partners
@@ -86,6 +101,11 @@
                 </p>
               </li>
               <li class="about-ofer-list-title">
+                <a href="" class="about-link">
+                  <svg class="about-icon" width="32" height="32">
+                    <use href="./images/icons.svg#icon-tab-hand"></use>
+                  </svg>
+                </a>
                 <h3 class="about-title">Easy To Order</h3>
                 <p class="about-paragraf">
                   You can browse through a wide variety of cuisines and
@@ -94,9 +114,7 @@
                 </p>
               </li>
             </ul>
-            <button class="button-order-now button-about" type="button">
-              Order Now
-            </button>
+            <button class="button-about" type="button">Order Now</button>
           </div>
         </div>
       </section>
@@ -163,7 +181,7 @@
       </section>
 
       <section class="section-review">
-        <div class="container">
+        <div class="container container-review">
           <h2 class="about-ofer-title review-h-title">
             What our Customers Say
           </h2>
@@ -173,6 +191,23 @@
           </p>
           <ul class="review-list">
             <li class="review-list-title">
+              <div class="div-star-container">
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
               <b class="review-paragraf"
                 >“The Best app I have used to order food in a while, so many
                 options to choose from too, I would recommend to a freind, No
@@ -185,28 +220,46 @@
                   width="48"
                   height="48"
                 />
-                <h3 class="review-name">Sumith Shah</h3>
-                <p class="about-paragraf">Some Dude</p>
-                >
+                <div class="div-review-name">
+                  <h3 class="review-name">Sumith Shah</h3>
+                  <p class="about-paragraf">Some Dude</p>
+                </div>
               </div>
             </li>
             <li class="review-list-title">
+              <div class="div-star-container">
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+                <svg class="icon-svg-star" width="17" height="18">
+                  <use href="./images/icons.svg#icon-star"></use>
+                </svg>
+              </div>
               <b class="review-paragraf"
                 >“The ease with which I can just go in and order what i want was
                 amazing, It has been a very pleasant experience ordering from
                 this app”</b
               >
               <div class="div-autor-review">
-                >
                 <img
                   src="./images/avatarfem.png"
                   alt="woman"
                   width="48"
                   height="48"
                 />
-                <h3 class="review-name">Sumith Shah</h3>
-                <p class="about-paragraf">Some Dude</p>
-                >
+                <div class="div-review-name">
+                  <h3 class="review-name">Sumith Shah</h3>
+                  <p class="about-paragraf">Some Dude</p>
+                </div>
               </div>
             </li>
           </ul>
@@ -214,65 +267,123 @@
       </section>
 
       <section class="section-subscribe">
-        <h2 class="about-ofer-title">Subscribe To Get Special Offers</h2>
-        <p class="hero-title-text">
-          Order now and receive 10% off your first meal with Enjoy Your Favorite
-          Food From Anywhere.
-        </p>
-        <form class="email-form">
-          <input
-            class="email-input"
-            type="email"
-            placeholder="Enter your email"
+        <div class="container container-subscribe">
+          <div class="contant-subscribe">
+            <h2 class="about-ofer-title title-subscribe">
+              Subscribe To Get Special Offers
+            </h2>
+            <p class="hero-title-text title-text-subscribe">
+              Order now and receive 10% off your first meal with Enjoy Your
+              Favorite Food From Anywhere.
+            </p>
+            <form class="email-form">
+              <input
+                class="email-input"
+                type="email"
+                placeholder="Enter your email"
+              />
+              <button class="button-large" type="submit">Subscribe</button>
+            </form>
+          </div>
+          <img
+            src="./images/banan-min.png"
+            alt="banan"
+            width="608"
+            height="266"
           />
-          <button class="email-subscribe-btn" type="submit">Subscribe</button>
-        </form>
-        <img
-          src="./images/banan-min.png"
-          alt="banan"
-          width="608"
-          height="266"
-        />
+        </div>
       </section>
     </main>
 
-    <footer>
-      <a class="logo" href=""
-        ><img
-          src="./images/icons.svg#icon-logo"
-          alt="logo"
-          width="66"
-          height="52"
-      /></a>
-      <nav class="navigation">
-        <ul class="navigation-list">
-          <li class="navigation-title"><a href="">Home</a></li>
-          <li class="navigation-title"><a href="">About</a></li>
-          <li class="navigation-title"><a href="">Service</a></li>
-          <li class="navigation-title"><a href="">Menu</a></li>
-          <li class="navigation-title"><a href="">Contact</a></li>
-        </ul>
-      </nav>
+    <footer class="section-footer">
+      <div class="container container-footer">
+        <div class="logo-navigation-form-line">
+          <div class="footer-wraper">
+            <a class="logo" href="./index.html">
+              <svg class="icon-svg-logo logo-link" width="66" height="52">
+                <use href="./images/icons.svg#icon-logo"></use>
+              </svg>
+            </a>
+            <nav class="navigation footer-navigation">
+              <ul class="navigation-list">
+                <li class="navigation-list-item">
+                  <a class="navigation-link" href="">Home</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="navigation-link" href="">About</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="navigation-link" href="">Service</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="navigation-link" href="">Menu</a>
+                </li>
+                <li class="navigation-list-item">
+                  <a class="navigation-link" href="">Contact</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
 
-      <b class="form-name">Subscribe</b>
-      <form>
-        <input
-          class="email-input"
-          type="email"
-          placeholder="Enter your email"
-        />
-        <button class="email-subscribe-btn" type="submit">Subscribe</button>
-      </form>
-      <p class="text-under-input">
-        By subscribing you agree to with our
-        <span class="text-under-input-accent">Privacy Policy</span>
-      </p>
-      <ul class="information-link-list">
-        <li class="information-link-title"><a href="">Privacy Policy</a></li>
-        <li class="information-link-title"><a href="">Terms of Service</a></li>
-        <li class="information-link-title"><a href="">Cookies Settings</a></li>
-      </ul>
-      <p class="page-release">2022 FoodSta. All right reserved.</p>
+          <div class="block-subscribe-form">
+            <b class="form-name">Subscribe</b>
+            <form>
+              <input
+                class="email-input"
+                type="email"
+                placeholder="Enter your email"
+              />
+              <button class="button-link-large" type="submit">Subscribe</button>
+            </form>
+            <p class="text-under-input">
+              By subscribing you agree to with our
+              <span class="text-under-input-accent">Privacy Policy</span>
+            </p>
+          </div>
+        </div>
+        <div class="down-line-footer">
+          <ul class="information-link-list">
+            <li class="information-link-title">
+              <a href="">Privacy Policy</a>
+            </li>
+            <li class="information-link-title">
+              <a href="">Terms of Service</a>
+            </li>
+            <li class="information-link-title">
+              <a href="">Cookies Settings</a>
+            </li>
+          </ul>
+          <p class="page-release">2022 FoodSta. All right reserved.</p>
+        </div>
+      </div>
     </footer>
+    <div class="bacdrop">
+      <div class="modal">
+        <button class="modal-close-btn">
+          <svg width="12" height="12">
+            <use href="./images/icons.svg#icon-close-nowsvg"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Order Form</p>
+        <form>
+          <label class="modal-label"
+            >Name<input
+              type="text"
+              class="modal-input"
+              placeholder="Your name" /></label
+          ><label class="modal-label"
+            >Phone number<input
+              type="tel"
+              class="modal-input"
+              placeholder="+38(0_ _) _ _ _   _ _   _ _" /></label
+          ><label class="modal-label"
+            >E-mail<input
+              type="email"
+              class="modal-input"
+              placeholder="example@gmail.com" /></label
+          ><button type="submit" class="modal-send-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
