--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </p>
             <button class="button-order-now" type="button">Order Now</button>
           </div>
-          <img class="hero-img" src="/images/saction1-salad.png" alt="salad" />
+          <img class="hero-img" src="./images/saction1-salad.png" alt="salad" />
         </div>
       </section>
 
@@ -130,7 +130,7 @@
           <ul class="food-list">
             <li class="food-title">
               <img
-                src="/images/gamburger-min.png"
+                src="./images/gamburger-min.png"
                 alt="gamburger-min"
                 width="315"
                 height="315"
@@ -138,7 +138,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/Pasta-min.png"
+                src="./images/Pasta-min.png"
                 alt="pasta-min"
                 width="315"
                 height="315"
@@ -146,7 +146,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/pizza-min.png"
+                src="./images/pizza-min.png"
                 alt="pizza-min"
                 width="315"
                 height="315"
@@ -154,7 +154,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/chicken-min.png"
+                src="./images/chicken-min.png"
                 alt="chicken-min"
                 width="315"
                 height="315"
@@ -162,7 +162,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/salat-min.png"
+                src="/.images/salat-min.png"
                 alt="salat-min"
                 width="315"
                 height="315"
@@ -170,7 +170,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/images/borshch-min.png"
+                src="./images/borshch-min.png"
                 alt="borshch-min"
                 width="315"
                 height="315"
