--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </li>
             <li class="food-title">
               <img
-                src="/.images/salat-min.png"
+                src="./images/salat-min.png"
                 alt="salat-min"
                 width="315"
                 height="315"
